--- a/market-report.html
+++ b/market-report.html
@@ -47,5 +47,13 @@
         <td>3.4 mil</td>
       </tr>
     </table>
+
+    <!-- Links -->
+    <a href="index.html">About</a>
+    <a href="new-properties.html">New Properties</a>
+    <a href="real-estate-listings.html">Listings</a>
+    <a href="market-report.html">Market Report</a>
+    <a href="contact.html">Contact</a>
+    <a href="http://hud.gov">H.U.D.</a>
   </body>
 </html>
