--- a/new-properties.html
+++ b/new-properties.html
@@ -5,6 +5,8 @@
     <title>Exceptional Realty Group - Luxury Homes - New Properties</title>
   </head>
   <body>
+    <h1>Exceptional</h1>
+    <h2>Realty Group</h2>
     <!-- Links -->
     <a href="index.html">About</a>
     <a href="new-properties.html">New Properties</a>
@@ -12,5 +14,7 @@
     <a href="market-report.html">Market Report</a>
     <a href="contact.html">Contact</a>
     <a href="http://hud.gov">H.U.D.</a>
+
+    <h3>New Properties</h3>
   </body>
 </html>
