--- a/index.html
+++ b/index.html
@@ -35,5 +35,10 @@
       reprehenderi in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia <br>
       deserunt mollit anim id est laborum.</p>
 
+      <video controls>
+        <source src="videos/real-estate.mp4" type="video/mp4">
+        <source src="videos/real-estate.ogv" type="video/ogg">
+        Your browser cannot play HTML5 video. <a href="http://browsehappy.com" target="_blank">Please update your browser.</a>
+      </video>
   </body>
 </html>
